tarea2/PythonToJavaParser.py
# Generated from PythonToJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonToJavaParser ( Parser ):

    grammarFileName = "PythonToJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "')'", "':'", "','", "'='", 
                     "'return'", "'print'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "DEF", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "ASSIGN", "RETURN", "PRINT", "PLUS", "MINUS", "MUL", 
                      "DIV", "NAME", "NUMBER", "NEWLINE", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_func_def = 1
    RULE_params = 2
    RULE_stmt = 3
    RULE_var_assign = 4
    RULE_return_stmt = 5
    RULE_print_stmt = 6
    RULE_expr = 7
    RULE_func_call = 8

    ruleNames =  [ "program", "func_def", "params", "stmt", "var_assign", 
                   "return_stmt", "print_stmt", "expr", "func_call" ]

    EOF = Token.EOF
    DEF=1
    LPAREN=2
    RPAREN=3
    COLON=4
    COMMA=5
    ASSIGN=6
    RETURN=7
    PRINT=8
    PLUS=9
    MINUS=10
    MUL=11
    DIV=12
    NAME=13
    NUMBER=14
    NEWLINE=15
    WS=16
    COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonToJavaParser.EOF, 0)

        def func_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.Func_defContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.Func_defContext,i)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonToJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 18
                self.func_def()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(PythonToJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonToJavaParser.DEF, 0)

        def NAME(self):
            return self.getToken(PythonToJavaParser.NAME, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonToJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def params(self):
            return self.getTypedRuleContext(PythonToJavaParser.ParamsContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)




    def func_def(self):

        localctx = PythonToJavaParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(PythonToJavaParser.DEF)
            self.state = 27
            self.match(PythonToJavaParser.NAME)
            self.state = 28
            self.match(PythonToJavaParser.LPAREN)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 29
                self.params()


            self.state = 32
            self.match(PythonToJavaParser.RPAREN)
            self.state = 33
            self.match(PythonToJavaParser.COLON)
            self.state = 34
            self.match(PythonToJavaParser.NEWLINE)
            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 35
                self.stmt()
                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 41344) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.NAME)
            else:
                return self.getToken(PythonToJavaParser.NAME, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.COMMA)
            else:
                return self.getToken(PythonToJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = PythonToJavaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(PythonToJavaParser.NAME)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 41
                self.match(PythonToJavaParser.COMMA)
                self.state = 42
                self.match(PythonToJavaParser.NAME)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(PythonToJavaParser.NEWLINE, 0)

        def var_assign(self):
            return self.getTypedRuleContext(PythonToJavaParser.Var_assignContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(PythonToJavaParser.Return_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(PythonToJavaParser.Print_stmtContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = PythonToJavaParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 48
                    self.var_assign()
                    pass
                elif token in [7]:
                    self.state = 49
                    self.return_stmt()
                    pass
                elif token in [8]:
                    self.state = 50
                    self.print_stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 53
                self.match(PythonToJavaParser.NEWLINE)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(PythonToJavaParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PythonToJavaParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(PythonToJavaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)




    def var_assign(self):

        localctx = PythonToJavaParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(PythonToJavaParser.NAME)
            self.state = 59
            self.match(PythonToJavaParser.ASSIGN)
            self.state = 60
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonToJavaParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonToJavaParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)




    def return_stmt(self):

        localctx = PythonToJavaParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PythonToJavaParser.RETURN)
            self.state = 63
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonToJavaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonToJavaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)




    def print_stmt(self):

        localctx = PythonToJavaParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PythonToJavaParser.PRINT)
            self.state = 66
            self.match(PythonToJavaParser.LPAREN)
            self.state = 67
            self.expr(0)
            self.state = 68
            self.match(PythonToJavaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PythonToJavaParser.NUMBER, 0)

        def func_call(self):
            return self.getTypedRuleContext(PythonToJavaParser.Func_callContext,0)


        def NAME(self):
            return self.getToken(PythonToJavaParser.NAME, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def MUL(self):
            return self.getToken(PythonToJavaParser.MUL, 0)

        def DIV(self):
            return self.getToken(PythonToJavaParser.DIV, 0)

        def PLUS(self):
            return self.getToken(PythonToJavaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PythonToJavaParser.MINUS, 0)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonToJavaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(PythonToJavaParser.NUMBER)
                pass

            elif la_ == 2:
                self.state = 72
                self.func_call()
                pass

            elif la_ == 3:
                self.state = 73
                self.match(PythonToJavaParser.NAME)
                pass

            elif la_ == 4:
                self.state = 74
                self.match(PythonToJavaParser.LPAREN)
                self.state = 75
                self.expr(0)
                self.state = 76
                self.match(PythonToJavaParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 86
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = PythonToJavaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 80
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 81
                        _la = self._input.LA(1)
                        if not(_la==11 or _la==12):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 82
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = PythonToJavaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 83
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 84
                        _la = self._input.LA(1)
                        if not(_la==9 or _la==10):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 85
                        self.expr(6)
                        pass

             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PythonToJavaParser.NAME, 0)

        def LPAREN(self):
            return self.getToken(PythonToJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonToJavaParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonToJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonToJavaParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonToJavaParser.COMMA)
            else:
                return self.getToken(PythonToJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonToJavaParser.RULE_func_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_call" ):
                listener.enterFunc_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_call" ):
                listener.exitFunc_call(self)




    def func_call(self):

        localctx = PythonToJavaParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(PythonToJavaParser.NAME)
            self.state = 92
            self.match(PythonToJavaParser.LPAREN)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 24580) != 0):
                self.state = 93
                self.expr(0)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 94
                    self.match(PythonToJavaParser.COMMA)
                    self.state = 95
                    self.expr(0)
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 103
            self.match(PythonToJavaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         




